# logic_designer

./: .gitignore  .gitignore~  3-way_toggle_vector.ai  README.md  detailed_description.tex  kinefold_long_static.tgz  mutant.ape  project_proposal.tex  tetR.ape
Regenesis_ How Synthetic Biology Will Re (574)/: Regenesis_ How Synthetic Biology Will Re - George McDonald Church.epub  metadata.opf
SimPartComposition/: BioSystem.m  Compositor.m  Part.m  Rate.m  repressilator.m  simple_enzyme.m
TEST/: README  example.e  example.i  example.p  example.req  example.rnm  example.rnm2  example.rnml  example_trace.eps  makeplot_example.pl  viewrnamovies_kinefold6
TEST/rnamovies-1.2/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
TEST/rnamovies-1.2/doc/: Makefile.am  Makefile.in
TEST/rnamovies-1.2/examples/: Makefile.am  Makefile.in  leptomonas.rnm  wwwww-99357.rnm
TEST/rnamovies-1.2/m4/: Makefile.am  Makefile.in
TEST/rnamovies-1.2/server/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  THANKS  config.h.in  configure  configure.ac  dberror.c  dberror.h  init.c  init.h  memory.c  memory.h  movie.c  naview.c  reconf  simple_parse.c  viewglobal.h  viewmain.c
TEST/rnamovies-1.2/server/client/: Makefile.am  Makefile.in
TEST/rnamovies-1.2/src/: Makefile.am  Makefile.in  accept.xpm  backward.xpm  button1.xpm  cancel.xpm  circle.xpm  close.xpm  dberror.c  dberror.h  fill_viewforms_cb.c  fit.xpm  forward.xpm  help.h  init.c  init.h  lglass_m.xbm  lglass_s.xbm  movie.c  naview.c  pause.xpm  play.xpm  postscript.c  quit.xpm  radial.xpm  reload.xpm  rewind.xpm  rot_m.xbm  rot_s.xbm  save.c  simple_parse.c  squiggle.xpm  viewforms.c  viewforms.fd  viewforms.h  viewglobal.h  viewmain.c  xfonts.c
ViennaRNA-2.1.3/: #Makefile.am#  #Makefile.in#  Makefile.in  configure
ViennaRNA-2.1.3/Cluster/: Makefile.in
ViennaRNA-2.1.3/H/: Makefile.in
ViennaRNA-2.1.3/Progs/: Makefile.in  RNAsubopt_cmdl.c  RNAsubopt_cmdl.h
ViennaRNA-2.1.3/RNAforester/g2-0.70/: Makefile
ViennaRNA-2.1.3/Utils/: Makefile.in
ViennaRNA-2.1.3/doc/: Makefile.in  RNAlib-2.1.3.tag
ViennaRNA-2.1.3/doc/html/: 1_88_84__epars_8h.html  1_88_84__epars_8h_source.html  1_88_84__intloops_8h.html  1_88_84__intloops_8h_source.html  2Dfold_8h.html  2Dfold_8h_source.html  2Dpfold_8h.html  2Dpfold_8h_source.html  LPfold_8h.html  LPfold_8h_source.html  Lfold_8h.html  Lfold_8h_source.html  MEA_8h.html  MEA_8h_source.html  PKplex_8h_source.html  PS__dot_8h.html  PS__dot_8h_source.html  ProfileAln_8h_source.html  RNAstruct_8h.html  RNAstruct_8h_source.html  ali__plex_8h_source.html  alifold_8h.html  alifold_8h_source.html  aln__util_8h_source.html  annotated.html  citelist.html  classes.html  cofold_8h.html  cofold_8h_source.html  convert__epars_8h.html  convert__epars_8h_source.html  data__structures_8h.html  data__structures_8h_source.html  deprecated.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d72344b28b4f2089ce25682c4e6eba22.html  dist__vars_8h.html  dist__vars_8h_source.html  duplex_8h.html  duplex_8h_source.html  (+173 more)
ViennaRNA-2.1.3/interfaces/: Makefile.in
ViennaRNA-2.1.3/interfaces/Perl/: Makefile.PL  Makefile.in  RNA.pm  RNA_wrap.c
ViennaRNA-2.1.3/interfaces/Python/: Makefile.in  RNA_wrap.c  setup.py
ViennaRNA-2.1.3/lib/: Makefile.in
ViennaRNA-2.1.3/man/: Makefile.in  RNA2Dfold.1  RNALalifold.1  RNALfold.1  RNAPKplex.1  RNAaliduplex.1  RNAalifold.1  RNAcofold.1  RNAdistance.1  RNAduplex.1  RNAeval.1  RNAfold.1  RNAheat.1  RNAinverse.1  RNAlib.info  RNApaln.1  RNAparconv.1  RNApdist.1  RNAplex.1  RNAplfold.1  RNAplot.1  RNAsnoop.1  RNAsubopt.1  RNAup.1
ViennaRNA-2.1.3/misc/: Makefile.in
hw/: "asdf".ps  hw1.pgf-plot.gnuplot  hw1.tex  hw2.tex  hw2.tex~  hw3.tex  ps3_nullclines.m  ps3_nullclines.m~
logic_designer/: project_proposal.tex
pyGates/: .#gateCreator.py  Socket.py  __init__.py  bulb.py  button.py  cable.py  circuit.py  compile.py  compositor.py  gate.py  gateCreator.py  load_image.py  pyGates.py  switch.py
pyGates/assets/: compile.png.ai
pydlcs-0fea5257aabe/: .hgtags
pydlcs-0fea5257aabe/examples/: expl_4bit_Sync_Binary_counter.py
pydlcs-0fea5257aabe/material/eventpy/: Event-driven programming in Python.html
pydlcs-0fea5257aabe/material/eventpy/pyevent/: event.py  event_sample.py
