# Copyright (C) 1999 Dirk Evers <dirk@TechFak.Uni-Bielefeld.DE>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = reconf configure
SUBDIRS = client

bin_PROGRAMS = rnamovies_server

rnamovies_server_SOURCES = dberror.c init.c memory.c movie.c simple_parse.c \
                    viewmain.c naview.c dberror.h init.h memory.h viewglobal.h
